<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_projects">

    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.aryn.crochet_app.fragment.ProjectsFragment"
        android:label="@string/title_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/navigation_current"
        android:name="com.aryn.crochet_app.fragment.CurrentFragment"
        android:label="@string/title_current"
        tools:layout="@layout/fragment_current" />

    <fragment
        android:id="@+id/navigation_conversion"
        android:name="com.aryn.crochet_app.fragment.ConversionFragment"
        android:label="@string/title_conversion"
        tools:layout="@layout/fragment_conversion" />
</navigation>