<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.ConversionFragment"
        android:id="@+id/frameLayout2">

    <TextView
            android:text="@string/hook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp" />

    <TextView
            android:text="@string/_2mm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="37dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
            android:text="@string/_2_25mm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="26dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
            android:text="@string/uk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginStart="50dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            android:layout_marginEnd="50dp" />

    <TextView
            android:text="@string/_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="220dp"
            android:layout_marginStart="50dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            android:layout_marginEnd="50dp"
            app:layout_constraintHorizontal_bias="0.507" />

    <TextView
            android:text="@string/_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textSize="20dp"
            android:layout_marginStart="50dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
            android:text="@string/us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/n_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:textSize="20dp"
            android:layout_marginEnd="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
            android:text="@string/b_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:textSize="20dp"
            android:layout_marginEnd="43dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ImageView
            android:layout_width="339dp"
            android:layout_height="229dp"
            android:background="@drawable/terminology"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            android:layout_marginTop="4dp"
            app:layout_constraintVertical_bias="0.394"
            app:layout_constraintHorizontal_bias="0.523" />

</androidx.constraintlayout.widget.ConstraintLayout>