<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.CurrentFragment"
        android:id="@+id/frameLayout">

    <TextView
            android:text="@string/no_current_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noProjects"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textColor="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/projectTitle"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:textSize="24sp"
            android:textAlignment="center" />

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            app:layout_constraintTop_toBottomOf="@+id/projectTitle"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:isScrollContainer="true"
            android:overScrollMode="always"
            android:id="@+id/scrollView">

        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/partsView"
                tools:visibility="visible"></TableLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="120dp"
            app:layout_constraintBottom_toTopOf="@+id/rowCounter"
            android:id="@+id/partInfo"
            app:layout_constraintTop_toBottomOf="@+id/scrollView"
            android:layout_marginTop="40dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/partName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:textSize="20sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:ems="10"
            android:id="@+id/rowCounter"
            android:layout_marginEnd="175dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="175dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="80dp"
            android:contextClickable="true"
            android:textAlignment="center"
            android:textSize="34sp" />

    <Button
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incrementButton"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toEndOf="@+id/rowCounter"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="80dp"
            android:textSize="20sp" />

    <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decrementButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rowCounter"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginEnd="30dp"
            android:textSize="20sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/ic_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/addPartFAB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="350dp"
            android:layout_marginEnd="20dp" />

    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteProject"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#FF0000"
            android:textColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>